Menu Ortu sudah di masukkan
Menggabungkan fitur balita dan fitur orang tua, edit splash screen dan menambah menu utama

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,7 +12,7 @@
         android:maxWidth="300dp"
         android:adjustViewBounds="true"
         android:layout_centerInParent="true"
-        android:src="@drawable/logodbs"
+        android:src="@drawable/alita"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </RelativeLayout>
