--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,90 +6,73 @@
     android:layout_height="match_parent"
     tools:context="com.trydev.games.guesswhat.MainActivity"
     android:background="@drawable/background"
-    android:paddingBottom="16dp"
+    android:padding="16dp"
     >
-
-    <ImageView
-        android:id="@+id/banana"
-        android:layout_marginTop="85dp"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/banana_title"
-        style="@style/fruit_title"
-        />
-    <ImageView
-        android:id="@+id/cherry"
-        android:layout_toStartOf="@id/banana"
-        style="@style/fruit_title"
-        android:src="@drawable/cherry_correct"
-        android:layout_marginTop="85dp"
-        />
-    <ImageView
-        style="@style/fruit_title"
-        android:src="@drawable/grape_correct"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="-35dp"
-        android:rotation="70"
-        android:layout_marginRight="-20dp"
-        />
-    <ImageView
-        android:id="@+id/strawberry"
-        style="@style/fruit_title"
-        android:src="@drawable/strawberry_correct"
-        android:layout_toEndOf="@id/banana"
-        android:layout_marginTop="75dp"
-        />
-    <ImageView
-        style="@style/fruit_title"
-        android:src="@drawable/orange_correct"
-        android:layout_marginTop="-20dp"
-        android:layout_marginLeft="-15dp"
-        />
-    <ImageView
-        android:id="@+id/panda"
-        style="@style/fruit_title"
-        android:src="@drawable/panda"
-        android:layout_centerHorizontal="true"
-        />
-    <ImageView
-        android:layout_toEndOf="@id/panda"
-        style="@style/fruit_title"
-        android:src="@drawable/cow"
-        />
-    <ImageView
-        android:layout_toStartOf="@id/panda"
-        style="@style/fruit_title"
-        android:src="@drawable/bear"
-        />
-
-    <ImageView
-        android:id="@+id/title"
+    <TextView
+        android:text="Pilih Kategori"
+        android:textAlignment="center"
+        android:textSize="50sp"
+        android:shadowRadius="2"
+        android:shadowDy="10"
+        android:shadowDx="10"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:adjustViewBounds="false"
-        android:src="@drawable/title" />
-
-    <ImageButton
-        android:layout_marginTop="100dp"
-        android:id="@+id/start"
-        style="@style/Buttons"
-        android:layout_below="@id/title"
-        android:src="@drawable/mulai_button_en"
-        />
-    <ImageButton
-        android:id="@+id/instruction"
-        style="@style/Buttons"
-        android:layout_below="@id/start"
-        android:src="@drawable/petunjuk_button_en"
-        />
-    <ImageButton
-        android:id="@+id/exit"
-        style="@style/Buttons"
-        android:layout_below="@id/instruction"
-        android:src="@drawable/keluar_button_en"
-        />
+        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageButton
+                android:id="@+id/pgBalita"
+                android:src="@drawable/baby2"
+                android:scaleType="fitCenter"
+                android:background="@android:color/transparent"
+                android:adjustViewBounds="true"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:onClick="pageBalita"/>
+            <TextView
+                android:textSize="24sp"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:shadowRadius="1"
+                android:shadowDx="5"
+                android:shadowDy="5"
+                android:text="Balita"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ImageButton
+                android:id="@+id/pgOrtu"
+                android:src="@drawable/ortu1"
+                android:scaleType="fitCenter"
+                android:background="@android:color/transparent"
+                android:adjustViewBounds="true"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:onClick="pageOrtu"/>
+            <TextView
+                android:textSize="24sp"
+                android:textAlignment="center"
+                android:text="Orang Tua"
+                android:shadowDy="5"
+                android:shadowDx="5"
+                android:shadowRadius="1"
+                android:textColor="@android:color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </LinearLayout>
 
 </RelativeLayout>
