--- a/app/src/main/res/layout/activity_hitung.xml
+++ b/app/src/main/res/layout/activity_hitung.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.doscom.weightapp.HitungActivity"
+    tools:context="com.trydev.games.guesswhat.HitungActivity"
     android:background="@drawable/boardnew">
 
     <LinearLayout
