--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -5,11 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    tools:context=".ArticleActivity">
+    android:background="@drawable/background"
+    tools:context=".ArticleOrtuActivity">
 
     <ListView
         android:id="@+id/idListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="493dp"
+        android:layout_marginTop="60dp"></ListView>
 
 </FrameLayout>
