--- a/app/src/main/res/layout/activity_hitung.xml
+++ b/app/src/main/res/layout/activity_hitung.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.trydev.games.guesswhat.HitungActivity"
-    android:background="@drawable/boardnew">
+    android:background="@drawable/background">
 
     <LinearLayout
         android:layout_width="match_parent"
