--- a/app/src/main/res/layout/activity_menubalita.xml
+++ b/app/src/main/res/layout/activity_menubalita.xml
@@ -31,13 +31,7 @@
         android:rotation="70"
         android:layout_marginRight="-20dp"
         />
-    <ImageView
-        android:id="@+id/strawberry"
-        style="@style/fruit_title"
-        android:src="@drawable/strawberry_correct"
-        android:layout_toEndOf="@id/banana"
-        android:layout_marginTop="75dp"
-        />
+
     <ImageView
         style="@style/fruit_title"
         android:src="@drawable/orange_correct"
@@ -63,22 +57,23 @@
 
     <ImageView
         android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="420dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:adjustViewBounds="false"
+        android:cropToPadding="false"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:adjustViewBounds="false"
-        android:src="@drawable/title" />
+        android:src="@drawable/alita" />
 
     <ImageButton
-        android:layout_marginTop="100dp"
         android:id="@+id/start"
         style="@style/Buttons"
         android:layout_below="@id/title"
-        android:src="@drawable/mulai_button_en"
-        />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-127dp"
+        android:src="@drawable/mulai_button_en" />
     <ImageButton
         android:id="@+id/instruction"
         style="@style/Buttons"
