--- a/app/src/main/res/layout/activity_menuortu.xml
+++ b/app/src/main/res/layout/activity_menuortu.xml
@@ -54,7 +54,7 @@
             android:layout_height="80dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
-            android:onClick="goToBalita" />
+            android:onClick="goToOrtu" />
 
 
     </LinearLayout>
